src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__closure_counter.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
do {
fn counter() {
  let n = 0

  return (fn() {
    let v = n
    n += 1
    v
  })
}

let c = counter()
let a = c() // 0
let b = c() // 1

if a == 0 and b == 1 { "ok" } else { "err" }
}

OK
.fn @main
  params 0
  stack 4
  .locals
    c = r1
    a = r2
    b = r3
  .code
   0  call r1, fn1   ; fn1=counter
   1  call r2, r1, 0   ; dyn
   2  call r3, r1, 0   ; dyn
   3  iseqi r2, 0
   4  jmp 5   ; to 9
   5  iseqi r3, 1
   6  jmp 3   ; to 9
   7  lstr r0, "ok"
   8  jmp 2   ; to 10
   9  lstr r0, "err"
  10  ret

.fn counter
  params 0
  stack 2
  .locals
    n = r1
  .code
  0  lsmi r1, 0
  1  lclosure r0, l0   ; closure{@48..84}, captures=1
  2  ret

.fn closure{@48..84}
  params 0
  stack 3
  .locals
    v = r1
  .captures
    n = r1
  .code
  0  luv r1, u0
  1  luv r2, u0
  2  add r2, r2, 1
  3  suv u0, r2
  4  retv r1
