src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__function_call_mid_stack_nargs_0.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
do {
fn f() {
  let a = 10 // r1
}

let a = 0 // r1
let v = 0 // r2
let b = 0 // r3

v = f() // dst is not at top, nargs = 0

b

// f0: [ r0, r1, r2, r3 ]
// f1:         [ r0, r1 ]
//
}

OK
.fn @main
  params 0
  stack 6
  .locals
    f = r1
    a = r2
    v = r3
    b = r4
  .code
  0  lclosure r1, l0   ; f, uv=0
  1  lsmi r2, 0
  2  lsmi r3, 0
  3  lsmi r4, 0
  4  call r5, r1, 0   ; dyn
  5  mov r3, r5
  6  retv r4

.fn f
  params 0
  stack 2
  .locals
    a = r1
  .code
  0  lsmi r1, 10
  1  lnil r0
  2  ret
