src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__function_call_needs_mov.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
fn f(v) {}

let a = 0
let b = 1

// dst is `r1`, and arg must go into `r2`,
// but `r2` is already taken, so we have
// to allocate including `dst` and then `mov`.
a = f(1)



OK
.fn @main
  params 0
  stack 5
  .locals
    a = r1
    b = r2
  .code
  0  lsmi r1, 0
  1  lsmi r2, 1
  2  lsmi r4, 1
  3  call r3, fn1   ; fn1=f
  4  mov r1, r3
  5  lnil r0
  6  ret

.fn f
  params 1
  stack 2
  .locals
    v = r1
  .code
  0  lnil r0
  1  ret
