src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__function_call_unused_no_args.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
OK
.fn @main
  params 0
  stack 3
  .locals
    a = r1
    b = r2
  .code
  0  lsmi r1, 0
  1  lsmi r2, 1
  2  call r1, fn1   ; fn1=f
  3  lnil r0
  4  ret

.fn f
  params 0
  stack 1
  .code
  0  lnil r0
  1  ret
