src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__function_call_var.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
do {
fn a(f) {
  f()
}

fn b() {
  "ok"
}

a(b)
}

OK
.fn @main
  params 0
  stack 2
  .code
  0  lfunc r1, fn2   ; fn2=b
  1  call r0, fn1   ; fn1=a
  2  ret

.fn a
  params 1
  stack 3
  .locals
    f = r1
  .code
  0  call r2, r1, 0   ; dyn
  1  retv r2

.fn b
  params 0
  stack 1
  .code
  0  lstr r0, "ok"
  1  ret
