src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__function_captures_nested.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
//module

fn a() {
  let v = 0

  let b = fn() {
    let c = fn() {
      v
    }
  }
}

OK
.fn @main
  params 0
  stack 1
  .code
  0  lnil r0
  1  ret

.fn a
  params 0
  stack 3
  .locals
    v = r1
    b = r2
  .code
  0  lsmi r1, 0
  1  lclosure r2, l0   ; closure{@47..85}, uv=1
  2  lnil r0
  3  ret

.fn closure{@47..85}
  params 0
  stack 2
  .locals
    c = r1
  .upvalues
    v = r1
  .code
  0  lclosure r1, l0   ; closure{@66..81}, uv=1
  1  lnil r0
  2  ret

.fn closure{@66..81}
  params 0
  stack 1
  .upvalues
    v = u0
  .code
  0  luv r0, u0
  1  ret
