src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__if_cond_negation_complex.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
do {
let a = 1
let b = 2
let result = 0

if (a<b) and (a<b)       { result+=1 }
if not ((a<b) and (a<b)) {}            else { result+=1 }
if (a<b) or (a<b)        { result+=1 } else {}
if not ((a<b) or (a<b))  {}            else { result+=1 }

result
}

OK
.fn @main
  params 0
  stack 5
  .locals
    a = r1
    b = r2
    result = r3
  .code
   0  lsmi r1, 1
   1  lsmi r2, 2
   2  lsmi r3, 0
   3  islt r1, r2
   4  jmp 5   ; to 9
   5  islt r1, r2
   6  jmp 3   ; to 9
   7  add r3, r3, 1
   8  lnil r4
   9  islt r1, r2
  10  jmp 3   ; to 13
  11  isge r1, r2
  12  jmp 3   ; to 15
  13  lnil r4
  14  jmp 3   ; to 17
  15  add r3, r3, 1
  16  lnil r4
  17  isge r1, r2
  18  jmp 3   ; to 21
  19  islt r1, r2
  20  jmp 4   ; to 24
  21  add r3, r3, 1
  22  lnil r4
  23  jmp 2   ; to 25
  24  lnil r4
  25  isge r1, r2
  26  jmp 5   ; to 31
  27  isge r1, r2
  28  jmp 3   ; to 31
  29  lnil r4
  30  jmp 3   ; to 33
  31  add r3, r3, 1
  32  lnil r4
  33  retv r3
